Fix component not compiling once imported to another project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "declaration": true,
     "outDir": "dist",
+    "types": ["svelte"]
   },
 
   "include": ["src/**/*"],
